Sync commit. Refector to align check and add endpoints. Add account doesn't exist message [GS4]
