# docs/swagger.json
@@ -11,7 +11,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/account/:id": {
+        "/account/{id}": {
             "get": {
                 "description": "Non-authenticated endpoint fetches account at specified key",
                 "produces": [
@@ -192,23 +192,39 @@
                 }
             }
         },
-        "credentials.AddConfluenceServerUserV1": {
+        "common.ConfluenceServerUserV1": {
             "type": "object",
             "properties": {
+                "authentication": {
+                    "type": "object",
+                    "$ref": "#/definitions/common.Auth"
+                },
                 "description": {
                     "type": "string"
                 },
                 "host": {
                     "type": "string"
                 },
-                "password": {
+                "port": {
+                    "type": "integer"
+                }
+            }
+        },
+        "common.GrafanaUserV1": {
+            "type": "object",
+            "properties": {
+                "authentication": {
+                    "type": "object",
+                    "$ref": "#/definitions/common.Auth"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "host": {
                     "type": "string"
                 },
                 "port": {
                     "type": "integer"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
@@ -218,34 +234,17 @@
                 "ConfluenceServerUsers": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/credentials.AddConfluenceServerUserV1"
+                        "$ref": "#/definitions/common.ConfluenceServerUserV1"
                     }
                 },
                 "GrafanaReadUsers": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/credentials.AddGrafanaReadUserV1"
+                        "$ref": "#/definitions/common.GrafanaUserV1"
                     }
                 },
                 "accountID": {
                     "type": "string"
-                }
-            }
-        },
-        "credentials.AddGrafanaReadUserV1": {
-            "type": "object",
-            "properties": {
-                "apikey": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "host": {
-                    "type": "string"
-                },
-                "port": {
-                    "type": "integer"
                 }
             }
         },
@@ -255,13 +254,13 @@
                 "ConfluenceServerUsers": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/credentials.AddConfluenceServerUserV1"
+                        "$ref": "#/definitions/common.ConfluenceServerUserV1"
                     }
                 },
                 "GrafanaReadUsers": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/credentials.AddGrafanaReadUserV1"
+                        "$ref": "#/definitions/common.GrafanaUserV1"
                     }
                 }
             }
@@ -357,9 +356,29 @@
                 }
             }
         },
+        "record.ConfluenceServerUser": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "host": {
+                    "type": "string"
+                },
+                "port": {
+                    "type": "integer"
+                }
+            }
+        },
         "record.CredentialsView1": {
             "type": "object",
             "properties": {
+                "ConfluenceServerUser": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/record.ConfluenceServerUser"
+                    }
+                },
                 "GrafanaAPIUsers": {
                     "type": "object",
                     "additionalProperties": {
@@ -371,8 +390,14 @@
         "record.GrafanaUser": {
             "type": "object",
             "properties": {
-                "Description": {
+                "description": {
                     "type": "string"
+                },
+                "host": {
+                    "type": "string"
+                },
+                "port": {
+                    "type": "integer"
                 }
             }
         },
